--- a/main_app/templates/dogs/index.html
+++ b/main_app/templates/dogs/index.html
@@ -5,15 +5,16 @@
 
 {% for dog in dogs %}
   <div class="card">
-    <div class="card-content">
+    <a href="{% url 'detail' dog.id %}">    <div class="card-content">
       <span class="card-title">{{ dog.name }}</span>
-      <p>Breed: {{ dog.breed }} / Color: {{ dog.color }}</p>
+      <p>Breed: {{ dog.breed }} </p>
       <p>Description: {{ dog.description }}</p>
       {% if dog.age > 0 %}
         <p>Age: {{ dog.age }}</p>
       {% else %}
         <p>Age: Puppy</p>
       {% endif %}
+        <p>Color: {{ dog.color }}</p>
     </div>
   </div>
 {% endfor %}
