--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,8 +19,9 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;DogCollector</a></li>
         </ul>
         <ul class="right">
-            <li><a href="/about">About</a></li>
-            <li><a href="/dogs">View All My Cats</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'dogs_create' %}">Add a Dog</a></li>
+          <li><a href="{% url 'index' %}">View All My Dogs</a></li>
         </ul>
       </div>
     </nav>
