--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -31,7 +31,7 @@
     {% endblock %}
   </main>
   <footer class="page-footer deep-purple darken-2">
-    <div class="right">All Rights Reserved, &copy; 2019 Cat Collector &nbsp;</div>
+    <div class="right">All Rights Reserved, &copy; 2020 Dog Collector &nbsp;</div>
   </footer>
 </body>
 </html>
