--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,8 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;DogCollector</a></li>
         </ul>
         <ul class="right">
+          <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+          <li><a href="{% url 'toys_index' %}">Show All Toys</a></li>
           <li><a href="{% url 'dogs_create' %}">Add a Dog</a></li>
           <li><a href="{% url 'index' %}">View All My Dogs</a></li>
         </ul>
